update embed link

--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
             <div class="activity-body">
               <div class="iframe-wrapper">
                 <!-- استبدل قيمة src بكود التضمين من Edpuzzle -->
-                <iframe src="https://edpuzzle.com/embed/media/YOUR_EDPUZZLE_ID" allowfullscreen
+                <iframe src="https://edpuzzle.com/embed/media/691073f87617c960de73d247" allowfullscreen
                   allow="fullscreen; autoplay" loading="lazy" title="Edpuzzle interactive video">
                 </iframe>
               </div>
@@ -743,8 +743,9 @@
             <div class="activity-body">
               <div class="iframe-wrapper">
                 <!-- من Wordwall: My Activities → ... → Embed → Iframe -->
-                <iframe src="https://wordwall.net/embed/YOUR_WORDWALL_ID" loading="lazy" allowfullscreen
-                  title="Wordwall interactive game">
+                <iframe
+                  src="https://wordwall.net/ar/embed/534cafa479b24c1182d2084726c2431b?themeId=1&templateId=3&fontStackId=0"
+                  loading="lazy" allowfullscreen title="Wordwall interactive game">
                 </iframe>
               </div>
               <p class="activity-notes">
@@ -764,27 +765,26 @@
             <button class="activity-header" type="button">
               <div class="activity-main-info">
                 <div class="activity-title">
-                  🏆 مسابقة سريعة في مكوّنات الحاسوب المادية
+                  🏆 مسابقة مكوّنات الحاسوب
                   <span class="activity-pill">Kahoot!</span>
                 </div>
-                <div class="activity-type">أسئلة اختيار من متعدد لمراجعة المفاهيم الرئيسة في نهاية الدرس.</div>
+                <div class="activity-type">اختبار تفاعلي لتثبيت المفاهيم</div>
               </div>
               <div class="activity-toggle-icon">−</div>
             </button>
             <div class="activity-body">
               <div class="iframe-wrapper">
-                <!-- مثال: https://embed.kahoot.it/KAHOOT_IDENTIFIER -->
-                <iframe src="https://embed.kahoot.it/YOUR_KAHOOT_ID" loading="lazy" allowfullscreen title="Kahoot quiz">
+                <iframe src="https://embed.kahoot.it/523a90c1-08b7-481f-83a4-b4538e441039" loading="lazy"
+                  allowfullscreen title="Kahoot quiz: مكوّنات الحاسوب">
                 </iframe>
               </div>
               <p class="activity-notes">
-                <strong>تعليمات للطالب:</strong>
-                شارك في المسابقة، وحاول الإجابة بسرعة ودقة على أسئلة حول وحدات الإدخال
-                والإخراج والمكوّنات الداخلية، ولا تنسَ مراجعة الأسئلة التي أخطأت بها.
+                <strong>تعليمات للطالب:</strong> ادخل الاسم ثم ابدأ المسابقة. هدفها مراجعة ما تعلّمته عن مكوّنات
+                الحاسوب.
               </p>
               <div class="activity-footer-tags">
                 <span class="small-tag">تقييم تكويني</span>
-                <span class="small-tag">تغذية راجعة فورية</span>
+                <span class="small-tag">مراجعة</span>
               </div>
             </div>
           </article>
@@ -804,8 +804,9 @@
             <div class="activity-body">
               <div class="iframe-wrapper">
                 <!-- من Liveworksheets: Embed in my website -->
-                <iframe src="https://www.liveworksheets.com/worksheets/your_liveworksheets_id.html" loading="lazy"
-                  allowfullscreen title="Liveworksheets activity">
+                <iframe
+                  src="https://www.liveworksheets.com/embed/c?a=s&t=vUi9HU3vta&sr=n&l=hy&i=ododtut&r=yd&f=dzdfuuds&ms=uz&cd=py-o4--0yzdlwijnjnzxzinngnexxnpxg&mw=hs"
+                  allowfullscreen loading="lazy" title="Liveworksheets interactive worksheet">
                 </iframe>
               </div>
               <p class="activity-notes">
